# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),

## [Unreleased]

### Added

 - Added new CI/CD build system that allows packaging for Windows, MacOS, and Linux and enaables auto-update @nr0q
 - Ported a lot of code from NWJS to Electron - @tag.loomis
 - Built the framework files boilerplate, provided lots of good advice @beaugunderson

### Changed

### Fixed

### Removed


[unreleased]: 