@@ -14,6 +14,12 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
 
 ### Changed
 
+  - Animate Active Paths moved from Ctrl-A to Ctrl-J
+  - Conditions Window Toggle moved from Ctrl-C to Ctrl-E
+  - Ctrl-A, Ctrl-C, Ctrl-V reserved for Select All, Copy, Paste for text areas in first.js
+  - Screenshot Ctrl-K writes PNG to appData Screeenshots folder
+  - Callsign hover "Callsign" in Call Roster mode removed
+  
 ### Fixed
 
 ### Removed
